# image-to-embedding

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
